cabal-version:      2.4
name:               haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             SamokhinIlya
maintainer:         samokhin.ilya.97@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable haskell
    main-is:          Main.hs

    ghc-options:      -O2
                      -threaded

    -- Modules included in this executable, other than Main.
    other-modules:    Game
                    , Canvas
                    , Input
                    , Game.Draw
                    , Game.Field
                    , Game.Input
                    , Game.Piece
                    , Game.Timer

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0
                    , gloss ^>=1.13.2.2
                    , bytestring
                    , array
                    , split
                    , containers
    hs-source-dirs:   app
    default-language: Haskell2010
